# gz-sim

./: .bazelrc  .clang-tidy  .dockerignore  .gitignore  .hgignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  BUILD.bazel  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  LICENSE  MODULE.bazel  Migration.md  NEWS  README.md  api.md.in  appveyor.yml  bitbucket-pipelines.yml  codecov.yml  configure.bat  my_system.cc  package.xml  pch_build_time_comparison.md  singleton_TEST.cc  test_executable.cc  tutorials.md.in
doc/: CMakeLists.txt  archetype_ecs_architecture.md  architecture_design.md  distributed_simulation.md  doxygen.css  header.html  ignition.in  implementing_system_plugins.md  layout.xml  mainpage.html  style.css  tutorials-doxygen.css  tutorials-footer.html  tutorials-header.html  tutorials.in
eigen3/: BUILD.bazel  CMakeLists.txt
eigen3/include/: CMakeLists.txt
eigen3/src/: CMakeLists.txt  Conversions_TEST.cc  Util_TEST.cc
examples/: CMakeLists.txt  README.md  additively_separable_scalar_field3_example.cc  angle_example.cc  angle_example.py  angle_example.rb  ball_drop.cc  color_example.cc  diff_drive_odometry.cc  diff_drive_odometry.py  gauss_markov_process_example.cc  gauss_markov_process_example.py  gauss_markov_process_example.rb  graph_example.cc  helpers_example.cc  helpers_example.rb  interval_example.cc  kmeans.cc  kmeans.py  matrix3_example.cc  matrix3_example.rb  piecewise_scalar_field3_example.cc  polynomial3_example.cc  pose3_example.cc  pose3_example.rb  quaternion_example.cc  quaternion_example.rb  quaternion_from_euler.cc  quaternion_to_euler.cc  rand_example.cc  rand_example.py  rand_view_normal.gp  rand_view_uniform.gp  region3_example.cc  temperature_example.cc  temperature_example.rb  triangle_example.cc  vector2_example.cc  vector2_example.py  vector2_example.rb  (+2 more)
examples/python/: helperFixture.py  testFixture.py
examples/worlds/: 3k_shapes.sdf  Actor_circle_path.sdf   CMakeLists.txt  ackermann_steering.sdf  acoustic_comms.sdf  acoustic_comms_demo.sdf  acoustic_comms_moving_targets.sdf  acoustic_comms_packet_collision.sdf  acoustic_comms_propagation.sdf  actor.sdf  actor_crowd.sdf  actors_population.sdf  actors_population.sdf.erb  advanced_lift_drag_system.sdf  altimeter_sensor.sdf  apply_joint_force.sdf  apply_link_wrench.sdf  auto_inertia_pendulum.sdf  auto_inertia_rolling_shapes.sdf  auv_controls.sdf  boundingbox_camera.sdf  breadcrumbs.sdf  buoyancy.sdf  buoyancy_engine.sdf  camera_lens_flare.sdf  camera_sensor.sdf  camera_video_record_dbl_pendulum.sdf  car_collision.sdf  cessna.sdf  collada_world_exporter.sdf  comms.sdf  contact_sensor.sdf  conveyor.sdf  conveyor_belt.sdf  cpu_lidar_sensor.sdf  debug_shapes.sdf  default.sdf  dem_monterey_bay.sdf  dem_moon.sdf  dem_volcano.sdf  (+140 more)
external_renderer/: CMakeLists.txt
external_renderer/producer_app/: main.cc
external_renderer/renderer_app/: main.cc
external_renderer/schema/: position.fbs
model/src/: CMakeLists.txt  ModelCommandAPI_TEST.cc
proto/: CMakeLists.txt
proto/private_msgs/: peer_control.proto  peer_info.proto  performer_affinity.proto  simulation_step.proto
python/: CMakeLists.txt
python/swig/: CMakeLists.txt  python.i
python/test/: actor_TEST.py  actor_test.sdf  custom_component_TEST.py  ecm_each_TEST.py  gravity.sdf  joint_TEST.py  joint_test.sdf  light_TEST.py  light_test.sdf  link_TEST.py  link_test.sdf  model_TEST.py  model_test.sdf  python_system_TEST.py  sensor_TEST.py  server_TEST.py  testFixture_TEST.py  world.sdf  world_TEST.py  world_test.sdf
src/: Actor.cc  Actor_TEST.cc  AddedMass_TEST.cc  AdditivelySeparableScalarField3_TEST.cc  Angle.cc  Angle.i  Angle_TEST.cc  Angle_TEST.py  Angle_TEST.rb  ArbitraryBox_TEST.cc  AxisAlignedBox.cc  AxisAlignedBox_TEST.cc  Barrier.cc  Barrier.hh  Barrier_TEST.cc  BaseView.cc  BaseView_TEST.cc  Box.cc  Box.i  BoxPrivate.cc  BoxPrivate.hh  Box_TEST.cc  Broker.cc  CMakeLists.txt  Capsule_TEST.cc  Color.cc  Color_TEST.cc  Component.cc  ComponentFactory.cc  ComponentFactory.hh  ComponentFactory_TEST.cc  ComponentManager.cc  ComponentManager.hh  ComponentManager_TEST.cc  ComponentPybindRegistry.cc  ComponentStorage.cc  ComponentStorage_TEST.cc  ComponentType.cc  ComponentType_TEST.cc  Component_TEST.cc  (+275 more)
src/bazel/: InstallationDirectories.cc
src/cmd/: CMakeLists.txt  ModelCommandAPI.cc  ModelCommandAPI.hh  ModelCommandAPI_TEST.cc  ParameterCommandAPI.cc  ParameterCommandAPI.hh  Utils.cc  Utils.hh  cmdgazebo.rb.in  cmdmodel.rb.in  cmdparam.rb.in  cmdpkg_create.rb.in  cmdsim.rb.in  gazebo.bash_completion.sh  gazebo.yaml.in  gui_main.cc  gz.cc  gz.hh  gz_TEST.cc  ign.cc  ign.hh  ign_TEST.cc  ignmodel.yaml.in  model.bash_completion.sh  model.yaml.in  model_main.cc  param.yaml.in  pkg_create.yaml.in  runGui_main.cc  server_main.cc  sim.bash_completion.sh  sim.yaml.in  sim_main.cc
src/comms/: Broker.cc  Broker_TEST.cc  ICommsModel.cc  MsgManager.cc  MsgManager_TEST.cc
src/components/: CMakeLists.txt  ChildEntity.cc  ComponentFactory_TEST.cc  Environment.cc  Geometry.cc  Inertial.cc  JointType.cc  Light.cc  Material.cc  Name.cc  ParentEntity.cc  Pose.cc  World.cc  WorldStatistics.cc  WrenchDebug.cc
src/ecs/: Archetype.cc  ArchetypeBackedECM.cc  ArchetypeGraph.cc  CMakeLists.txt  Chunk.cc  CommandBuffer.cc  ComponentTypeRegistry.cc  EntityIndex.cc  Query.cc  World.cc
src/external_renderer/: CMakeLists.txt  README.md
src/graph/: CMakeLists.txt  Edge_TEST.cc  GraphAlgorithms_TEST.cc  GraphDirected_TEST.cc  GraphUndirected_TEST.cc  Graph_TEST.cc  Vertex_TEST.cc
src/gui/: AboutDialogHandler.cc  AboutDialogHandler.hh  CMakeLists.txt  ClientSystem.cc  ClientSystem.hh  Gui.cc  GuiEvents.cc  GuiEvents_TEST.cc  GuiFileHandler.cc  GuiFileHandler.hh  GuiRunner.cc  GuiRunner.hh  GuiSystem.cc  GuiUtils.cc  GuiUtils_TEST.cc  Gui_TEST.cc  Gui_clean_exit_TEST.cc  PathManager.cc  PathManager.hh  QuickSetup.cc  QuickSetup.hh  QuickStartHandler.cc  QuickStartHandler.hh  TmpIface.cc  gui.config  (+1 more)
test/: BUILD.bazel  CMakeCache.txt  CMakeLists.txt  find_dri.cmake  test_config.h  test_config.h.in  test_config.hh.in
(+3158 files in other folders)
