module(
    name = "gz-sim",
    compatibility_level = 9,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "eigen", version = "3.4.0.bcr.3")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "30.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "tinyxml2", version = "10.0.0")

# Gazebo Dependencies
bazel_dep(name = "rules_gazebo", version = "0.0.6")
bazel_dep(name = "gz-common", version = "6.3.0")
bazel_dep(name = "gz-fuel-tools", version = "10.1.0")
bazel_dep(name = "gz-math", version = "8.1.1.bcr.1")
bazel_dep(name = "gz-msgs", version = "11.1.0.bcr.2")
bazel_dep(name = "gz-physics", version = "8.3.0.bcr.1")
bazel_dep(name = "gz-plugin", version = "3.1.0")
bazel_dep(name = "gz-rendering", version = "9.4.0")
bazel_dep(name = "gz-sensors", version = "9.2.0.bcr.1")
bazel_dep(name = "gz-transport", version = "14.2.0.bcr.1")
bazel_dep(name = "gz-utils", version = "3.1.1")
bazel_dep(name = "sdformat", version = "15.3.0.bcr.2")
